--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
-                    <h1 class="text-uppercase text-white font-weight-bold">BENEVOL 2023 </h1>
+                    <h1 class="text-uppercase text-white font-weight-bold">BENEVOL 4 </h1>
                     <hr class="divider my-4">
                 </div>
                 <div class="col-lg-12 align-self-baseline text-white">
-                    <h2>The 22nd Belgium-Netherlands Software Evolution Workshop</h2>
-                    <h2 class="mb-5">Nijmegen, 27-28 November 2023</h2>
+                    <h2>The 23rd Belgium-Netherlands Software Evolution Workshop</h2>
+                    <h2 class="mb-5">Namur, 2024</h2>
                 </div>
             </div>
         </div>
