--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">BENEVOL 2023</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">BENEVOL 2024</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
                         <a class="nav-link js-scroll-trigger" href="#keynotes">Program</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL memory</a>
+                        <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL Memory</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#organization">Organization</a>
@@ -95,18 +95,16 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="firstKeynoteTitle">Emotions and Perceived Productivity of Software Developers</h5>
+            <h5 class="modal-title" id="firstKeynoteTitle">Title 1</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify"> Is your code working? How productive was your meeting? What kind of coding tasks make developers happiest? What makes them angriest?  Emotions are known to impact cognitive skills, thus influencing job performance. This is also true for software development, which requires creativity and problem-solving abilities, that are known to be influenced by emotions. Early recognition of negative emotions, such as stress or frustration can enable just-in-time intervention for developers and team managers, in order to prevent burnout and undesired turnover.
-                In this talk, I will present an overview of our research on developers’ emotions and their relationship with self-assessed productivity. We have conducted empirical studies in order to understand the triggers for developers’ emotions, as well as the strategies they implement to deal with negative ones and restore positive feelings. Furthermore, we investigated to what extent it is possible to support developers’ emotion awareness using biometrics for emotion recognition. Next, I will present the advances and open challenges in the recognition of developers’ emotions using a minimal set of non-invasive biometric sensors, i.e. a wristband capturing the electrodermal activity and heart-related metrics.
-            </p>
+            <p class="text-justify">Insert abstract here.</p>
             <h4>Biography</h4>
-            <p class="text-justify"> Nicole Novielli is an Associate Professor at the University of Bari, Italy. Her research interests lie at the intersection of software engineering and affective computing with a specific focus on emotion mining from software repositories, natural language processing of developers’ communication traces, and biometric recognition of developers’ emotions. Website: <a href="https://collab.di.uniba.it/nicole/" target="_blank">https://collab.di.uniba.it/nicole/</a></p>
+            <p class="text-justify">Insert biography here.</p>
             </div>
         </div>
         </div>
@@ -117,20 +115,16 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="secondKeynoteTitle">Energy and Performance: A (sometimes) synergistic relationship</h5>
+            <h5 class="modal-title" id="secondKeynoteTitle">Title 2</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">In a globally warming world full of smartphones, data centers, laptops, and capitalism, software developers worry about the energy consumption of the software they build. At least some do. With that worry, comes the will and arguably the need to make such software energy-efficient. With that intention, then comes que question: how? Using less resources seems to be the obvious answer, but what that entails is not always evident, specially considering the relationship between performance and energy efficiency. Simple cases are usually, well, simple. However, the world is a complicated place and software is a particularly complicated aspect of this complicated world. In this talk, I will discuss some of the problems that developers face when trying to make software greener and present some research results that illustrate the not-always-harmonious relationship between improving performance and reducing energy consumption.
-            </p>
+            <p class="text-justify">Insert abstract here.</p>
             <h4>Biography</h4>
-            <p class="text-justify">Fernando Castor is an Associate Professor at the Formal Methods and Tools group, University of Twente. His broad research goal is to help developers build more efficient software systems more efficiently. More specifically, he conducts research in the areas of Software Maintenance, Software Energy Efficiency, and Code Understandability.
-                <br />
-                Website: <a href="https://fernandocastor.github.io/" target="_blank">https://fernandocastor.github.io/</a>
-            </p>
+            <p class="text-justify">Insert biography here.</p>
             </div>
         </div>
         </div>
@@ -141,21 +135,16 @@
         <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="thirdKeynoteTitle">How to be(come) a successful PhD student – for dummies</h5>
+            <h5 class="modal-title" id="thirdKeynoteTitle">Title 3</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
             <h4>Abstract</h4>
-            <p class="text-justify">Based on over two decades of experience as a PhD advisor in the domain of software engineering, in this talk I will present my lessons learned on how to be(come) a successful PhD student. I will present practical advice, guidelines, tips and tricks, and I will outline the abilities, skills and tools that are useful to acquire during the course of your PhD studies. I will also talk about the difficulties and challenges that need to be overcome.
-            </p>
+            <p class="text-justify">Insert abstract here.</p>
             <h4>Biography</h4>
-            <p class="text-justify">Tom Mens is a full professor and director of the INFORTECH Research Institute at the University of Mons in Belgium. He is leading the Software Engineering Lab since 2003, and currently advisor of 6 PhD students that work around research topics related to software evolution, software ecosystems, software analytics and  automated software engineering. He has co-edited many scientific articles in the field, as well as three Springer books, of which the most recent one, entitled “Software Ecosystems: Tooling and Analytics” was published in 2023.
-                <br />
-                <a href="https://scholar.google.com/citations?user=5RJe8dsAAAAJ" target="_blank">Google Scholar</a>,
-                <a href="https://www.linkedin.com/in/tommens/" target="_blank">LinkedIn</a>
-            </p>
+            <p class="text-justify">Insert biography here.</p>
             </div>
         </div>
         </div>
@@ -173,12 +162,12 @@
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/nicole.jpeg">
                             </a>
                             <a href="https://collab.di.uniba.it/nicole/" target="_blank">
-                                <h5>Nicole Novielli</h5>
-                                <p class="font-weight-light mb-0">University of Bari</p>
+                                <h5>Surname Name 1</h5>
+                                <p class="font-weight-light mb-0">University Name</p>
                             </a>
                             <a data-toggle="modal" href="#firstKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Emotions and Perceived Productivity of Software Developers</u>
+                                    <u>Title</u>
                                 </p>
                             </a>
                         </div>
@@ -187,12 +176,12 @@
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/fernando.jpeg">
                             </a>
                             <a href="http://fernandocastor.github.io/" target="_blank">
-                                <h5>Fernando Castor</h5>
-                                <p class="font-weight-light mb-0">University of Twente</p>
+                                <h5>Surname Name 2</h5>
+                                <p class="font-weight-light mb-0">University Name</p>
                             </a>
                             <a data-toggle="modal" href="#secondKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>Energy and Performance: A (sometimes) synergistic relationship</u>
+                                    <u>Title</u>
                                 </p>
                             </a>
                         </div>
@@ -201,12 +190,12 @@
                                 <img class="img-fluid rounded-circle mb-3 col-lg-9" src="img/tom.jpeg">
                             </a>
                             <a href="https://informatique.umons.ac.be/perso/Mens.Tom/" target="_blank">
-                                <h5>Tom Mens</h5>
-                                <p class="font-weight-light mb-0">University of Mons</p>
+                                <h5>Surname Name 3</h5>
+                                <p class="font-weight-light mb-0">University Name</p>
                             </a>
                             <a data-toggle="modal" href="#thirdKeynote">
                                 <p class="font-weight-light mt-3 mb-0 text-danger">
-                                    <u>How to be(come) a successful PhD student – for dummies</u>
+                                    <u>Title</u>
                                 </p>
                             </a>
                         </div>
