--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
             <div class="row my-4 mx-auto">
                 <div class=" col-lg-8 mx-auto mt-4 mb-2 text-center">
                     <p class="mt-4 mb-2 text-center lato">
-                        BENEVOL 2023 proceedings are available on <a href="https://ceur-ws.org/Vol-3567/" target="_blank">CEUR-ws</a>.
+                        BENEVOL 2024 proceedings are available on [link].
                     </p>
                 </div>
             </div>
@@ -962,7 +962,7 @@
 
         <footer class="bg-light py-5">
             <div class="container">
-                <div class="small text-center text-muted">Copyright &copy; 2023 - Start Bootstrap</div>
+                <div class="small text-center text-muted">Copyright &copy; 2024 - Start Bootstrap | Images by Philippe BERGER (CC License)</div>
             </div>
         </footer>
 
