--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
     </div>
 
-    <section class="bg-light page-section" id="keynotes">
+    <section class="bg-white page-section" id="keynotes">
         <div class="container">
             <h2 class="text-center mt-0">Keynotes</h2>
             <hr class="divider my-4">
@@ -205,21 +205,11 @@
         </div>
     </section>
 
-    <section class="bg-white page-section" id="program">
+    <section class="bg-light page-section" id="program">
         <div class="container">
             <h2 class="text-center mt-0">Program</h2>
             <br>
             <p style="text-align: center;">To be announced...</p>
-        </div>
-    </section>
-
-    <section class="bg-light page-section" id="memory">
-        <div class="container">
-            <h2 class="text-center mt-0">BENEVOL Memory</h2>
-            <hr class="divider my-4">
-            <div class="row">
-                <img class="img-fluid" src="img/group-picture.jpg" alt="group_photo">
-            </div>
         </div>
     </section>
 
@@ -232,50 +222,73 @@
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/p-placeholder.png" alt="Surname Name">
+                            <a href="https://snail.info.unamur.be/author/xavier-devroey" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/xavier.jpg" alt="Surname Name">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name</h5>
+                            <a href="https://snail.info.unamur.be/author/xavier-devroey" target="_blank">
+                                <h5>Xavier Devroey</h5>
                                 <p class="font-weight-light mb-0">
-                                    Role <br /> University Name, Country
+                                    <b>General Chair</b> <br /> University of Namur, Belgium
                                 </p>
                             </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/p-placeholder.png" alt="Surname Name">
+                            <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/gilles.jpg" alt="Surname Name">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name</h5>
+                            <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
+                                <h5>Gilles Perrouin</h5>
                                 <p class="font-weight-light mb-0">
-                                    Role <br /> University Name, Country
+                                    <b>Program Chair</b> <br /> University of Namur, Belgium
                                 </p>
                             </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/p-placeholder.png" alt="Surname Name">
+                            <a href="https://snail.info.unamur.be/author/benoit-vanderose" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/benoit.jpg" alt="Surname Name">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name</h5>
+                            <a href="https://snail.info.unamur.be/author/benoit-vanderose" target="_blank">
+                                <h5>Benoît Vanderose</h5>
                                 <p class="font-weight-light mb-0">
-                                    Role <br /> University Name, Country
+                                    <b>Program Chair</b> <br /> University of Namur, Belgium
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row my-4 mx-auto">
+                        <div class="col-lg-4 text-center mx-auto d-block">
+                            <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/anthony.jpg" alt="Surname Name">
+                            </a>
+                            <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">
+                                <h5>Anthony Cleve</h5>
+                                <p class="font-weight-light mb-0">
+                                    <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
                                 </p>
                             </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="link" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/p-placeholder.png" alt="Surname Name">
+                            <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Surname Name">
                             </a>
-                            <a href="link" target="_blank">
-                                <h5>Surname Name</h5>
+                            <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
+                                <h5>Alix Decrop</h5>
                                 <p class="font-weight-light mb-0">
-                                    Role <br /> University Name, Country
+                                    <b>Web Chair</b> <br /> University of Namur, Belgium
                                 </p>
                             </a>
                         </div>
-
+                        <div class="col-lg-4 text-center mx-auto d-block">
+                            <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/tom.jpeg" alt="Surname Name">
+                            </a>
+                            <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
+                                <h5>Tom Mens</h5>
+                                <p class="font-weight-light mb-0">
+                                    <b>Co-Organizer</b> <br /> University of Mons, Belgium
+                                </p>
+                            </a>
+                        </div>
                     </div>
                     <br />
                     <br />
