added babette to committee

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://snail.info.unamur.be/author/xavier-devroey" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/xavier.jpg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/xavier.jpg" alt="Xavier Devroey Picture">
                             </a>
                             <a href="https://snail.info.unamur.be/author/xavier-devroey" target="_blank">
                                 <h5>Xavier Devroey</h5>
@@ -234,7 +234,7 @@
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/gilles.jpg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/gilles.jpg" alt="Gilles Perrouin Picture">
                             </a>
                             <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
                                 <h5>Gilles Perrouin</h5>
@@ -245,7 +245,7 @@
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://snail.info.unamur.be/author/benoit-vanderose" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/benoit.jpg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/benoit.jpg" alt="Benoît Vanderose Picture">
                             </a>
                             <a href="https://snail.info.unamur.be/author/benoit-vanderose" target="_blank">
                                 <h5>Benoît Vanderose</h5>
@@ -258,7 +258,7 @@
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/anthony.jpg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/anthony.jpg" alt="Anthony Cleve Picture">
                             </a>
                             <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">
                                 <h5>Anthony Cleve</h5>
@@ -267,9 +267,21 @@
                                 </p>
                             </a>
                         </div>
+                        <div class="row my-4 mx-auto">
+                            <div class="col-lg-4 text-center mx-auto d-block">
+                                <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
+                                    <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/babette.jpg" alt="Babette Di Guardia Picture">
+                                </a>
+                                <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
+                                    <h5>Babette Di Guardia</h5>
+                                    <p class="font-weight-light mb-0">
+                                        <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
+                                    </p>
+                                </a>
+                            </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Alix Decrop Picture">
                             </a>
                             <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
                                 <h5>Alix Decrop</h5>
@@ -280,7 +292,7 @@
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
-                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/tom.jpeg" alt="Surname Name">
+                                <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/tom.jpeg" alt="Tom Mens Picture">
                             </a>
                             <a href="https://informatique.umons.ac.be/perso/Mens.Tom" target="_blank">
                                 <h5>Tom Mens</h5>
