new map and mobility info

--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
             <div class="row my-4 mx-auto">
                 <div class=" col-lg-8 mx-auto mt-4 mb-2 text-center">
                     <p class="mt-4 mb-2 text-justify lato">
-                        The BENEVOL 2024 venue is located at the <a href="https://www.unamur.be/en" target="_blank">University of Namur</a>, Rue de Bruxelles 61, 5000 Namur.
-                        You can use this map to find the <b><span style="color:rgb(70, 107, 176)">workshop venue</span></b>, but also suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
+                        The BENEVOL 2024 venue is located at the <a href="https://www.unamur.be/en" target="_blank">University of Namur</a>, Rue de Bruxelles 61, 5000 Namur, in the building of the Faculty of Science.
+                        You can use this map to find the <b><span style="color:darkgreen">venue</span></b>, but also suggestions for <b><span style="color:darkred">accomodations</span></b> in Namur.
                     </p>  
                     <div class="l-box pure-u-1">
                         <div class="iframe-container is-center">
@@ -397,9 +397,9 @@
                 <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
                     <h4>Travel to BENEVOL 2024</h4>
                     <p class="mt-4 mb-2 text-justify lato"> The venue can be easily reached by bike, bus, train, and car. You can use the website <a href="https://www.belgium.be/en/mobility/public_transport" target="_blank">Belgium Mobility</a> to find information about local trains and buses, including timetables, fares and up-to-date information.</p>    
-                    <p class="mt-4 mb-2 text-justify lato"><b>Buses:</b></p>
-                    <p class="mt-4 mb-2 text-justify lato"><b>Trains:</b></p>
-                    <p class="mt-4 mb-2 text-justify lato"><b>Airports:</b></p>
+                    <p class="mt-4 mb-2 text-justify lato"><b>Buses:</b> <a href="https://www.letec.be" target="_blank">TEC</a> offers bus services throughout Wallonia. On their website, you can find information regarding routes, timetables and nearby bus stations.</p>
+                    <p class="mt-4 mb-2 text-justify lato"><b>Trains:</b> <a href="https://www.belgiantrain.be/en" target="_blank">SNCB</a> is the train company of Belgium. On their website, you can plan your journey (international included) and buy tickets.</p>
+                    <p class="mt-4 mb-2 text-justify lato"><b>Airports:</b> The 2 closest airports are the <a href="https://www.brusselsairport.be/en/passengers" target="_blank">Brussels Zaventem Airport</a> (55 minutes from venue) and the <a href="https://www.brussels-charleroi-airport.com/en" target="_blank">Brussels Charleroi Airport</a> (30 minutes from venue).</p>
                 </div>
             </div>
         </div>
