--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#keynotes">Program</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!--<li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#memory">BENEVOL Memory</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#organization">Organization</a>
                     </li>
@@ -63,9 +63,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#venue">Venue & Accomodation</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#proceedings">Proceedings</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#sponsors">Sponsors</a>
                     </li>
@@ -89,7 +89,7 @@
             </div>
         </div>
     </header>
-
+    <!--
     <div class="modal fade" id="firstKeynote" tabindex="-1" role="dialog" aria-labelledby="firstKeynoteTitle"
     aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
@@ -149,7 +149,7 @@
         </div>
         </div>
     </div>
-
+    
     <section class="bg-white page-section" id="keynotes">
         <div class="container">
             <h2 class="text-center mt-0">Keynotes</h2>
@@ -204,7 +204,7 @@
             </div>
         </div>
     </section>
-
+    
     <section class="bg-light page-section" id="program">
         <div class="container">
             <h2 class="text-center mt-0">Program</h2>
@@ -212,7 +212,7 @@
             <p style="text-align: center;">To be announced...</p>
         </div>
     </section>
-
+    -->
     <!-- organization -->
     <section class="bg-white page-section" id="organization">
         <div class="container">
@@ -267,8 +267,7 @@
                                 </p>
                             </a>
                         </div>
-                        <div class="row my-4 mx-auto">
-                            <div class="col-lg-4 text-center mx-auto d-block">
+                        <div class="col-lg-4 text-center mx-auto d-block">
                                 <a href="https://directory.unamur.be/staff/bdiguard" target="_blank">
                                     <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/babette.jpg" alt="Babette Di Guardia Picture">
                                 </a>
@@ -278,7 +277,7 @@
                                         <b>Local Arrangement Chair</b> <br /> University of Namur, Belgium
                                     </p>
                                 </a>
-                            </div>
+                        </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Alix Decrop Picture">
@@ -303,7 +302,7 @@
                         </div>
                     </div>
                     <br />
-                    <br />
+                    <!-- <br />
                     <h4 class="section-heading">Program Committee</h4>
                     <div class="row">
                         <div class="col-lg-12 col-md-12 text-left">
@@ -313,7 +312,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
     </section>
@@ -405,7 +404,7 @@
         </div>
     </section>
 
-    <section class="bg-light page-section" id="proceedings">
+    <!-- <section class="bg-light page-section" id="proceedings">
         <div class="container">
             <h2 class="text-center mt-0">Proceedings</h2>
             <hr class="divider my-4">
@@ -417,13 +416,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="bg-white page-section" id="sponsors">
         <div class="container">
             <h2 class="text-center mt-0">Our Sponsors</h2>
             <hr class="divider my-4">
-            &nbsp;&nbsp;&nbsp;
+            <br/>
             <h4 class="text-center">Gold Sponsors</h4>
             <br>
             <p style="text-align: center;">Gold Sponsors will appear here!</p>
@@ -435,6 +434,10 @@
             <h4 class="text-center">Bronze Sponsors</h4>
             <br>
             <p style="text-align: center;">Bronze Sponsors will appear here!</p>
+            <br/>
+            <br/>
+            <p style="text-align: center;">Please, do not hesitate to <a href="mailto:Xavier%20Devroey<xavier.devroey@unamur.be>?subject=BENEVOL2024">contact us</a> if you want to sponsor BENEVOL 2024! ;-)</p>
+            <br/>
         </div>
     </section> 
 
