updated Gilles' URL

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                             </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
+                            <a href="https://gperroui.github.io" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/gilles.jpg" alt="Gilles Perrouin Picture">
                             </a>
-                            <a href="https://researchportal.unamur.be/en/persons/gperroui" target="_blank">
+                            <a href="https://gperroui.github.io" target="_blank">
                                 <h5>Gilles Perrouin</h5>
                                 <p class="font-weight-light mb-0">
                                     <b>Program Chair</b> <br /> University of Namur, Belgium
