added alix' website

--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                                 </a>
                         </div>
                         <div class="col-lg-4 text-center mx-auto d-block">
-                            <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
+                            <a href="https://alixdecr.github.io" target="_blank">
                                 <img class="img-fluid rounded-circle mb-3 col-lg-6" src="img/alix.jpg" alt="Alix Decrop Picture">
                             </a>
-                            <a href="https://researchportal.unamur.be/en/persons/decropa" target="_blank">
+                            <a href="https://alixdecr.github.io" target="_blank">
                                 <h5>Alix Decrop</h5>
                                 <p class="font-weight-light mb-0">
                                     <b>Web Chair</b> <br /> University of Namur, Belgium
