--- a/index.html
+++ b/index.html
@@ -324,46 +324,68 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
                     <p class="mt-4 mb-2 text-justify lato">
-                        The goal of BENEVOL is to bring together researchers who are working in the field of software evolution and maintenance. BENEVOL offers an informal forum to meet and discuss new ideas, important problems, and obtained research results.
+                        The goal of BENEVOL is to bring together researchers who are working in the field of software evolution and maintenance. BENEVOL offers an informal forum to meet and discuss new ideas, relevant problems, and fresh research results.
                     </p>
-                    <p class="mt-4 mb-2 text-justify lato">
-                        BENEVOL accepts submissions in two categories:
-                    </p>
-
+                    <br>
+                    <h4>Submission Categories</h4>
                     <p class="text-justify lato">
-                        <b>Technical papers (5 to 8 pages; single column)</b> will undergo a mild yet constructive review. We explicitly solicit papers in the early stages of research, which are still rather rough around the edges and would benefit from
-                        feedback from the community. Technical papers will be reviewed by at least three members of the program committee, assessing whether they are within the scope of BENEVOL (i.e., software maintenance and evolution) and meet its quality
-                        criteria. Authors will be asked to improve their paper and submit a camera-ready version that will be published in the <a href="http://ceur-ws.org">CEUR-WS.org</a> workshop proceedings.
+                        <b>Technical Research Papers (TECH).</b> Full-length technical papers present original research empirically or formally validated. We also welcome papers in the early stages of their development that would benefit from feedback from the community.
                     </p>
-
                     <p class="text-justify lato">
-                        <b>Presentation abstracts (up to 2 pages; single column)</b> report on research results without inclusion in the proceedings. They will only be reviewed for relevance, and they will be made available on the website of the workshop.
-                        Presentation abstracts can either be novel research results that should not be included in the proceedings or results that have already been published or are ready to be submitted to a conference or a journal. Of particular interest are summaries that try to provoke discussion and initiate challenging new avenues.
+                        <b>New Ideas and Controversial Perspectives (NICE).</b> We welcome position papers presenting new and potentially controversial software maintenance and evolution perspectives. Such papers may not have an evaluation, though illustrative examples and cases are welcome.
                     </p>
-                    <br />
+                    <p class="text-justify lato">
+                        <b>Replicated or Invalidated Papers (RIP).</b> The growing complexity and size of software systems combined with the rise of machine learning for maintenance and evolution tasks makes replicability challenging. We invite replication efforts of existing papers, describing successes (replicated) or difficulties (invalidated). This category extends to new negative results, which are key to narrowing down hypotheses.
+                    </p>
+                    <p class="text-justify lato">
+                        <b>Presentation Abstracts (ABS).</b> Presentation abstracts reports on research results without inclusion in the proceedings. Presentation abstracts cover research that has already been published or is ready to be submitted to a conference or a journal.
+                    </p>
+                    <br>
+                    <h4>Reviewing</h4>
+                    <p class="text-justify lato">
+                        At least three programme committee members will review TECH, NICE, and RIP papers. They will assess the adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will be part of the proceedings. ABS papers will only be reviewed for relevance and will be made available on the workshop's website.
+                    </p>
+                    <br>
+                    <h4>Page Limits</h4>
+                    <p class="text-justify lato">
+                        <ul class="lato">
+                            <li><b>TECH & RIP Papers:</b> 10 to 12 pages of main text + an unlimited number of pages for references and appendices;</li>
+    
+                            <li><b>NICE Papers:</b> Maximum 5 pages + 4 pages for references and appendices;</li>
+    
+                            <li><b>ABS Papers:</b> Maximum 2 pages, including references.</li>
+                        </ul>
+                    </p>
+                    <br/>
                     <h4>Submission Guidelines</h4>
                     <p class="text-justify lato">
-                        All submissions must conform to the new CEUR-ART style. One can use the LaTeX template directly on <a href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX template files). All submissions should use the single-column template. Technical papers must consist of 5 to 8 pages while presentation abstracts should not exceed 2 pages. The limits include the main text, figures, tables, appendices, and references.
+                        All submissions must conform to the new CEUR-ART style. One can use the LaTeX template directly on <a href="https://www.overleaf.com/read/gwhxnqcghhdt">Overleaf</a> or download an <a href="http://ceur-ws.org/Vol-XXX/CEURART.zip">offline version</a> with the style files (including DOCX template files). All submissions should use the single-column template.
                     </p>
                     <p class="text-justify lato">
-                        Papers should be submitted via <a href="https://easychair.org/conferences/?conf=benevol2024">EasyChair</a>. Please, mark the category it belongs to, i.e., a technical paper or a presentation abstract. You can upload incremental
-                        versions of your paper, so do not wait until the last minute to submit it.
+                        We allow using AI tools for writing assistance (grammar checkers, rephrasing). Of course, we explicitly forbid LLM-generated papers as it may lead to plagiarism and may be regarded as unethical. Therefore, such tools cannot be credited as authors. Please check the <a href="https://ceur-ws.org/ACADEMIC-ETHICS.html">CEUR-WS Policy on AI assisting tools</a> for more information.
                     </p>
-                    <br />
+                    <p class="text-justify lato">
+                        Papers should be submitted via <a href="https://easychair.org/conferences/?conf=benevol2024">EasyChair</a>. Please mark the category it belongs to. You can upload incremental versions of your paper, so do not wait until the last minute to submit it.
+                    </p>
+                    <p class="text-justify lato">
+                        We will ask the authors to improve their paper and submit a camera-ready version according to the reviews. Proceedings shall be submitted to <a href="http://ceur-ws.org/">CEUR-WS.org</a> for online publication.
+                    </p>
+                    <br/>
 
                     <h4>Important Dates</h4>
+                    <p class="text-justify lato">
+                        Below, you can find the imortant dates. <b>Please note that all dates are in the Anywhere on Earth (AoE) calendar designation.</b>
+                    </p>
                     <ul class="lato">
-                        <li><b>Submission deadline:</b> TBA </li>
+                        <li><b>Submission Deadline:</b> Mon 16 September 2024</li>
 
-                        <li><b>Author notification:</b> TBA </li>
+                        <li><b>Author Notification:</b> Mon 14 October 2024 </li>
 
-                        <li><b>Camera-ready:</b> TBA </li>
+                        <li><b>Registration Deadline:</b> Mon 21 October 2024 </li>
 
-                        <li><b>Registration deadline:</b> TBA </li>
+                        <li><b>Camera-ready:</b> Mon 28 October 2024 </li>
 
-                        <li><b>Workshop date:</b> Thu 21 - Fri 22 November 2024 </li>
-                        <!-- Always Open  -->
-
+                        <li><b>Workshop Date:</b> Thu 21 - Fri 22 November 2024 </li>
                     </ul>
                     <div class="row">
                         &nbsp;&nbsp;&nbsp;
