small changes from Gilles

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <br>
                     <h4>Reviewing</h4>
                     <p class="text-justify lato">
-                        At least three programme committee members will review TECH, NICE, and RIP papers. They will assess the adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will be part of the proceedings. ABS papers will only be reviewed for relevance and will be made available on the workshop's website.
+                        At least three programme committee members will review TECH, NICE, and RIP papers. They will assess the adherence to the workshop's scope (maintenance and evolution) and the above categories. Accepted papers will be part of the proceedings. ABS papers will only be reviewed for relevance and will be made available on the workshop's website. BENEVOL follows the single-blind reviewing model.
                     </p>
                     <br>
                     <h4>Page Limits</h4>
@@ -374,7 +374,7 @@
 
                     <h4>Important Dates</h4>
                     <p class="text-justify lato">
-                        Below, you can find the imortant dates. <b>Please note that all dates are in the Anywhere on Earth (AoE) calendar designation.</b>
+                        Below, you can find the imortant dates. <b>Please note that all dates are in the Anywhere on Earth (AoE, 23h59) calendar designation.</b>
                     </p>
                     <ul class="lato">
                         <li><b>Submission Deadline:</b> Mon 16 September 2024</li>
