--- a/index.html
+++ b/index.html
@@ -474,12 +474,18 @@
             <p style="text-align: center;">Silver Sponsors will appear here!</p>
             <br>
             <h4 class="text-center">Bronze Sponsors</h4>
+            
             <div class="row">
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
                         <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://www.linkedin.com/groups/36096/" target="_blank">
                                 <img class="img-fluid mb-6 col-lg-16" src="img/grascomp.jpg" alt="GRASCOMP">
+                            </a>
+                        </div>
+                        <div class="col-lg-5 text-center mx-auto d-block">
+                            <a href="https://cyberexcellence.be" target="_blank">
+                                <img class="img-fluid mb-6 col-lg-16" src="img/cyberexcellence.png" alt="CyberExcellence">
                             </a>
                         </div>
                     </div>
