added hotel discount information

--- a/index.html
+++ b/index.html
@@ -413,6 +413,9 @@
                             <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mJRlOtGneQ48NFSzndMM5wMxrcx07-g&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
                         </div>
                     </div> 
+                    <p class="mt-4 mb-2 text-justify lato">
+                        <span style="color:darkred">To receive a discount, please inform the hotel reception that you are visiting for the University of Namur</span>. This offer is valid at the following hotels: Grand Hôtel de Flandre, Ibis Namur Centre, Hotel des Tanneurs, and B&B Hotel Namur. Additionally, for the B&B Hotel Namur, you may use the following promotional code: 31046578. The discount can be redeemed by selecting the coupon icon on the registration website <a href="https://www.hotel-bb.com/en/be" target="_blank">https://www.hotel-bb.com/en/be</a>.
+                    </p>
                     &nbsp;&nbsp;&nbsp;
                 </div>
                 <div class="col-lg-8 mx-auto mt-4 mb-2 text-justify">
