--- a/index.html
+++ b/index.html
@@ -452,41 +452,45 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
-                        <div class="col-lg-3 text-center mx-auto d-block">
+                        <div class="col-lg-2 text-center mx-auto d-block">
                             <a href="https://info.unamur.be" target="_blank">
                                 <img class="img-fluid mb-6 col-lg-16" src="img/facinfo.png" alt="Faculte informatique">
                             </a>
                         </div>
-                        <div class="col-lg-4 text-center mx-auto d-block">
+                        <div class="col-lg-2 text-center mx-auto d-block">
+                            <a href="https://www.frs-fnrs.be/" target="_blank">
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="NADI">
+                            </a>
+                        </div>
+                        <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://nadi.unamur.be" target="_blank">
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <img class="img-fluid mb-6 col-lg-16" src="img/nadi.jpg" alt="NADI">
                             </a>
                         </div>
-                        <div class="col-lg-4 text-center mx-auto d-block">
-                            <br/><br/>
-                            <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">                                
-                                Data-Intensive SofTware Evolution Lab (DISTEL)
-                            </a>
+                        <div class="col-lg-2 text-center mx-auto d-block">
+                            <p class="text-justify lato">
+                                <a href="https://researchportal.unamur.be/en/persons/acleve" target="_blank">Data-Intensive SofTware Evolution Lab (DISTEL)</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <h4 class="text-center">Silver Sponsors</h4>
+            <!-- <h4 class="text-center">Silver Sponsors</h4>
             <br>
             <p style="text-align: center;">Silver Sponsors will appear here!</p>
-            <br>
+            <br> -->
             <h4 class="text-center">Bronze Sponsors</h4>
-            
             <div class="row">
                 <div class="col-lg-8 mx-auto my-4 text-justify">
                     <div class="row my-4 mx-auto">
-                        <div class="col-lg-3 text-center mx-auto d-block">
+                        <div class="col-lg-2 text-center mx-auto d-block">
                             <a href="https://www.linkedin.com/groups/36096/" target="_blank">
                                 <img class="img-fluid mb-6 col-lg-16" src="img/grascomp.jpg" alt="GRASCOMP">
                             </a>
                         </div>
-                        <div class="col-lg-5 text-center mx-auto d-block">
+                        <div class="col-lg-4 text-center mx-auto d-block">
                             <a href="https://cyberexcellence.be" target="_blank">
                                 <img class="img-fluid mb-6 col-lg-16" src="img/cyberexcellence.png" alt="CyberExcellence">
                             </a>
@@ -495,7 +499,7 @@
                 </div>
             </div>
             <br/>
-            <p style="text-align: center;">Please, do not hesitate to <a href="mailto:Xavier%20Devroey<xavier.devroey@unamur.be>?subject=BENEVOL2024">contact us</a> if you want to sponsor BENEVOL 2024! ;-)</p>
+            <p class="text-center lato">Please, do not hesitate to <a href="mailto:Xavier%20Devroey<xavier.devroey@unamur.be>?subject=BENEVOL2024">contact us</a> if you want to sponsor BENEVOL 2024! ;-)</p>
             <br/>
         </div>
     </section> 
