adding precise sponsoring

--- a/index.html
+++ b/index.html
@@ -460,13 +460,21 @@
                         <div class="col-lg-2 text-center mx-auto d-block">
                             <a href="https://www.frs-fnrs.be/" target="_blank">
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="NADI">
+                                <img class="img-fluid mb-6 col-lg-16" src="img/fnrs.png" alt="FNRS">
                             </a>
                         </div>
                         <div class="col-lg-3 text-center mx-auto d-block">
                             <a href="https://nadi.unamur.be" target="_blank">
                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                 <img class="img-fluid mb-6 col-lg-16" src="img/nadi.jpg" alt="NADI">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row my-4 mx-auto">
+                        <div class="col-lg-3 text-center mx-auto d-block">
+                            <a href="https://nadi.unamur.be/research-centers/precise" target="_blank">
+                                &nbsp;&nbsp;&nbsp;&nbsp;
+                                <img class="img-fluid mb-6 col-lg-16" src="img/precise.png" alt="PRECISE">
                             </a>
                         </div>
                         <div class="col-lg-2 text-center mx-auto d-block">
